--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 
-.recommenders/snipmatch/repositories/http___git_eclipse_org_gitroot_recommenders_org_eclipse_recommenders_snipmatch_snippets_git/
+.recommenders/
+.metadata/
